@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.2.6
+VERSION=1.2.7
 
-DEPENDENCY="zeda=1.2.20;zm=1.2.11"
+DEPENDENCY="zeda=1.2.20;zm=1.2.14"
