@@ -21,10 +21,27 @@ typedef struct{
 } dzFreqRes;
 
 __EXPORT zComplex *dzFreqResToComplex(dzFreqRes *fr, zComplex *c, double *af);
-__EXPORT dzFreqRes *dzFreqResFromComplex(dzFreqRes *fr, zComplex *c, double *af);
+__EXPORT dzFreqRes *dzFreqResFromComplex(dzFreqRes *fr, zComplex *c, double af);
 
 __EXPORT dzFreqRes *dzFreqRes2Closed(dzFreqRes *frin, dzFreqRes *frout);
 __EXPORT dzFreqRes *dzFreqRes2Open(dzFreqRes *frin, dzFreqRes *frout);
+
+/*! \brief frequency response of transfer function.
+ *
+ * dzFreqResFromTF() calculates the frequency response \a fr of a transfer
+ * function \a tf. \a af is an angular frequency.
+ *
+ * dzTFToComplex converts a transfer function \a tf to a complex number \a c
+ * that respresents the frequency response of \a tf to an input angular
+ * frequency \a af.
+ *
+ * Suppose the transfer function is G(s), and the result is G(j \a af).
+ * \return
+ * dzFreqResFromTF() returns a pointer \a fr.
+ * dzTFToComplex() returns a pointer \a c.
+ */
+__EXPORT dzFreqRes *dzFreqResFromTF(dzFreqRes *fr, dzTF *tf, double af);
+__EXPORT zComplex *dzTFToComplex(dzTF *tf, double af, zComplex *c);
 
 /* ********************************************************** */
 /*! \class dzFreqResList
@@ -44,6 +61,10 @@ __EXPORT int dzFreqResListFPrint(FILE *fp, dzFreqResList *list, double fmin, dou
 
 __EXPORT int dzFreqResListScanFile(dzFreqResList *list, char filename[], double fmin, double fmax);
 __EXPORT int dzFreqResListPrintFile(dzFreqResList *list, char filename[], double fmin, double fmax);
+
+/* ********************************************************** */
+/* identification of a transfer function from frequency response
+ * ********************************************************** */
 
 __EXPORT dzTF *dzTFIdentFromFreqRes(dzTF *tf, dzFreqResList *list, int nn, int nd, int iter);
 
