@@ -10,7 +10,7 @@ LD=gcc
 LDFLAGS=-shared
 SIGNUP=echo "DZco ver."$(VERSION)" Copyright (C) 2000 Tomomichi Sugihara (Zhidao)" >>
 
-OBJ=dz_tf.o dz_tf_ident_fr.o\
+OBJ=dz_tf.o dz_tf_fr.o\
 	dz_lin.o\
 	dz_sys.o\
 	dz_sys_misc.o dz_sys_pid.o dz_sys_lag.o\
