@@ -1,3 +1,13 @@
+2019. 9.30. Reflected new specification of zIsEqual in dzTFZeroPoleReIm, _dzFreqResMul and _dzFreqResDiv. [dz_tf, dz_tf_fr]
+2019. 9.30. Added dzTFConnect. [dz_tf]
+2019. 9.30. Added dzTFInit. [dz_tf]
+2019. 9.29. Modified _dzFreqResConnectTF. [dz_tf_fr]
+2019. 9.29. Added dzFreqResFromTF. [dz_tf_fr]
+2019. 9.29. Renamed dzTFFreqRes to dzTFToComplex and moved from dz_tf to dz_tf_fr. [dz_tf, dz_tf_fr, app]
+2019. 9.29. Renamed dz_tf_ident_fr to dz_tf_fr. [dz_tf, dz_tf_fr]
+2019. 9.29. Modified dzFreqRes2Closed and dzFreqRes2Open. [dz_tf_ident_fr]
+2019. 9.29. Added _dzFreqResMul and _dzFreqResDiv. [dz_errmsg, dz_tf_ident_fr]
+2019. 9.29. Modified specification of _dzFreqResFromComplex. [dz_tf_ident_fr]
 2019. 9.26. Debugged dz_fr2tf. [app]
 2019. 9.25. Added dz_tf2zeropole. [app]
 2019. 9.25. Added dzTFZeroPole and dzTFZeroPoleReIm. [dz_tf]
